[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprite/Walk/Walk1.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Sprite/Walk/Walk2.png" type="Texture" id=4]
[ext_resource path="res://Sprite/Walk/Walk4.png" type="Texture" id=5]
[ext_resource path="res://Sprite/Walk/Walk3.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "Walk",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 25.7778, 39.1111 )

[sub_resource type="CircleShape2D" id=3]
radius = 29.0

[node name="Player" type="KinematicBody2D"]
position = Vector2( 56, 28 )
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 1 )
animation = "Idle"

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 4, 0 )
scale = Vector2( 0.75, 0.75 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3.33334, 1.33333 )
scale = Vector2( 0.75, 0.75 )
shape = SubResource( 2 )
one_way_collision_margin = 0.0

[node name="PlayerHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHitbox"]
position = Vector2( -4, 2 )
shape = SubResource( 3 )

[node name="Attack-cooldown" type="Timer" parent="."]

[node name="Healthbar" type="ProgressBar" parent="."]
modulate = Color( 0.054902, 1, 0, 1 )
show_behind_parent = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -29.0
margin_top = 31.0
margin_right = 21.0
margin_bottom = 45.0
percent_visible = false

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 36, 4 )

[connection signal="body_entered" from="PlayerHitbox" to="." method="_on_PlayerHitbox_body_entered"]
[connection signal="body_exited" from="PlayerHitbox" to="." method="_on_PlayerHitbox_body_exited"]
[connection signal="timeout" from="Attack-cooldown" to="." method="_on_Attackcooldown_timeout"]
